platform-services-v2/orchestration-services/superset/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superset
  labels:
    app.kubernetes.io/name: apache-superset
    app.kubernetes.io/component: bi-analytics
    deployment.wave: "2"
    istio-injection: disabled
