platform-services-v2/orchestration-services/superset/superset-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-superset
  namespace: superset
  labels:
    app.kubernetes.io/name: apache-superset
    app.kubernetes.io/component: bi-analytics
spec:
  selector:
    app.kubernetes.io/name: apache-superset
    app.kubernetes.io/component: bi-analytics
  ports:
  - port: 8088
    targetPort: 8088
    name: http
  type: ClusterIP
